Support for disambiguation pages

--- a/DBPedia.html
+++ b/DBPedia.html
@@ -36,17 +36,25 @@
             '{                                                       ',
             '    ?s rdfs:label "{word}"@{lang} .                     ',
             '    {                                                   ',
+            '        ?s dbo:thumbnail ?pic  ;                        ',
+            '           dbo:abstract  ?abstract                      ',
+            '    }                                                   ',
+            '    UNION                                               ',
+            '    {                                                   ',
+            '        ?s dbo:wikiPageDisambiguates ?actualResource .  ',
+            '        ?actualResource rdfs:label    ?redirectsTo ;    ',
+            '                        dbo:thumbnail ?pic         ;    ',
+            '                        dbo:abstract  ?abstract         ',
+            '        FILTER(lang(?redirectsTo) = "{lang}")           ',
+            '    }                                                   ',
+            '    UNION                                               ',
+            '    {                                                   ',
             '        ?s dbo:wikiPageRedirects ?actualResource .      ',
             '        ?actualResource rdfs:label    ?redirectsTo ;    ',
             '                        dbo:thumbnail ?pic         ;    ',
-            '                       dbo:abstract  ?abstract          ',
+            '                        dbo:abstract  ?abstract         ',
             '        FILTER(lang(?redirectsTo) = "{lang}")           ',
-            '   }                                                    ',
-            '   UNION                                                ',
-            '   {                                                    ',
-            '        ?s dbo:thumbnail ?pic  ;                        ',
-            '          dbo:abstract  ?abstract                       ',
-            '   }                                                    ',
+            '    }                                                   ',
             '}                                                       ',
             'FILTER (lang(?abstract) = "{lang}")                     ',
             '} LIMIT 1                                               '
