added .gitignore changed DBpedia result to jsonp to prevent "same origin policy" issues added semicolons

--- a/DBPedia.html
+++ b/DBPedia.html
@@ -6,97 +6,94 @@
 
 <body>
 
-    <label for="word">Слово: </label>
-    <input id="word" type="text"/>
-    <br/>
-    <label for="lang">Язык: </label>
-    <select id="lang" type="select">
-        <option value="ru">ru</option>
-        <option value="en">en</option>
-        <option value="de">de</option>
-        <option value="fr">fr</option>
-    </select>
-    <br/>
-    <button type="button" onclick="queryDBpedia()">Search</button>
+<label for="word">Слово: </label>
+<input id="word" type="text"/>
+<br/>
+<label for="lang">Язык: </label>
+<select id="lang">
+    <option value="ru">ru</option>
+    <option value="en">en</option>
+    <option value="de">de</option>
+    <option value="fr">fr</option>
+</select>
+<br/>
+<button type="button" onclick="queryDBpedia()">Search</button>
 
-    <br/><br/>
+<br/><br/>
 
-    <div id="img"></div>
-    <textarea id="abstract" cols="80" rows="10"></textarea>
+<div id="img"></div>
+<textarea id="abstract" cols="80" rows="10"></textarea>
 
-    <script src="http://code.jquery.com/jquery-latest.min.js"
-            type="text/javascript"></script>
+<script src="http://code.jquery.com/jquery-latest.min.js" type="text/javascript"></script>
 
-    <script>
+<script>
 
-        sparql_query = [
-            'PREFIX rdfs: <http://www.w3.org/2000/01/rdf-schema#>    ',
-            'PREFIX dbo: <http://dbpedia.org/ontology/>              ',
-            'SELECT ?pic, ?abstract WHERE {                          ',
-            '{                                                       ',
-            '    ?s rdfs:label "{word}"@{lang} .                     ',
-            '    {                                                   ',
-            '        ?s dbo:thumbnail ?pic  ;                        ',
-            '           dbo:abstract  ?abstract                      ',
-            '    }                                                   ',
-            '    UNION                                               ',
-            '    {                                                   ',
-            '        ?s dbo:wikiPageDisambiguates ?actualResource .  ',
-            '        ?actualResource rdfs:label    ?redirectsTo ;    ',
-            '                        dbo:thumbnail ?pic         ;    ',
-            '                        dbo:abstract  ?abstract         ',
-            '        FILTER(lang(?redirectsTo) = "{lang}")           ',
-            '    }                                                   ',
-            '    UNION                                               ',
-            '    {                                                   ',
-            '        ?s dbo:wikiPageRedirects ?actualResource .      ',
-            '        ?actualResource rdfs:label    ?redirectsTo ;    ',
-            '                        dbo:thumbnail ?pic         ;    ',
-            '                        dbo:abstract  ?abstract         ',
-            '        FILTER(lang(?redirectsTo) = "{lang}")           ',
-            '    }                                                   ',
-            '}                                                       ',
-            'FILTER (lang(?abstract) = "{lang}")                     ',
-            '} LIMIT 1                                               '
-        ].join('\n');
+    sparql_query = [
+        'PREFIX rdfs: <http://www.w3.org/2000/01/rdf-schema#>    ',
+        'PREFIX dbo: <http://dbpedia.org/ontology/>              ',
+        'SELECT ?pic, ?abstract WHERE {                          ',
+        '{                                                       ',
+        '    ?s rdfs:label "{word}"@{lang} .                     ',
+        '    {                                                   ',
+        '        ?s dbo:thumbnail ?pic  ;                        ',
+        '           dbo:abstract  ?abstract                      ',
+        '    }                                                   ',
+        '    UNION                                               ',
+        '    {                                                   ',
+        '        ?s dbo:wikiPageDisambiguates ?actualResource .  ',
+        '        ?actualResource rdfs:label    ?redirectsTo ;    ',
+        '                        dbo:thumbnail ?pic         ;    ',
+        '                        dbo:abstract  ?abstract         ',
+        '        FILTER(lang(?redirectsTo) = "{lang}")           ',
+        '    }                                                   ',
+        '    UNION                                               ',
+        '    {                                                   ',
+        '        ?s dbo:wikiPageRedirects ?actualResource .      ',
+        '        ?actualResource rdfs:label    ?redirectsTo ;    ',
+        '                        dbo:thumbnail ?pic         ;    ',
+        '                        dbo:abstract  ?abstract         ',
+        '        FILTER(lang(?redirectsTo) = "{lang}")           ',
+        '    }                                                   ',
+        '}                                                       ',
+        'FILTER (lang(?abstract) = "{lang}")                     ',
+        '} LIMIT 1                                               '
+    ].join('\n');
 
-        function queryDBpedia()
-        {
-            word = $("input#word").val()
-            // Transforming the string to make it conforming to the strict case rules
-            // NB: Makes all the letters lower case except the 1st one, so fails for names
-            word = word.substring(0, 1).toUpperCase() +
-                   word.substring(1, word.Length).toLowerCase()
-            lang = $("select#lang").val()
+    function showData(msg) {
+        console.log(msg);
+        if (msg.results.bindings.length > 0) {
+            $("div#img").html("<img src ='" + msg.results.bindings[0].pic.value + "'/>");
+            $("textarea#abstract").val(msg.results.bindings[0].abstract.value);
+        } else {
+            console.error("no result");
+        }
+    }
 
-            query = sparql_query.replace("{word}", word)
-            query = query.replace(/{lang}/g, lang)
+    function queryDBpedia() {
+        word = $("input#word").val();
+        // Transforming the string to make it conforming to the strict case rules
+        // NB: Makes all the letters lower case except the 1st one, so fails for names
+        word = word.substring(0, 1).toUpperCase() +
+                word.substring(1, word.Length).toLowerCase();
+        lang = $("select#lang").val();
 
-            $.ajax({
+        query = sparql_query.replace("{word}", word);
+        query = query.replace(/{lang}/g, lang);
+
+        $.ajax({
             type: "GET",
             url: "http://dbpedia.org/sparql/",
+            dataType: "jsonp",
+            jsonpCallback: "showData",
             data: { "default-graph-uri": "http://dbpedia.org",
-                    "query": query,
-                    "format": "application/sparql-results+xml",
-                    "timeout": 30000,
-                    "debug": "on" },
-            success: function(msg){
-              $("div#img").html('<img src="' + msg.documentElement.getElementsByTagName("results")[0].
-                                                                   getElementsByTagName("result")[0].
-                                                                   getElementsByTagName("binding")[0].
-                                                                   getElementsByTagName("uri")[0].textContent + '"/>');
-              $("textarea#abstract").val(msg.documentElement.getElementsByTagName("results")[0].
-                                                             getElementsByTagName("result")[0].
-                                                             getElementsByTagName("binding")[1].
-                                                             getElementsByTagName("literal")[0].textContent);
-            },
-            error: function(){
-              alert("error")
-            }
-            });
-        }
+                "query": query,
+                "format": "application/json",
+                "timeout": 30000,
+                "debug": "on" }
+        });
+    }
 
-    </script>
+</script>
 
 </body>
 </html>
